# pipecd

./: .bazelignore  .bazelrc  .dockerignore  .gha-reversemap.yml  .gitattributes  .gitignore  .golangci.yml  .lychee.toml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  00_START_HERE.md  ADOPTERS.md  ARCHITECTURE.md  BUILD.bazel  BUILD.bazel.tpl  CLA.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DELIVERABLES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MAINTAINERS  MAINTAINERS.json  MAINTAINERS.md  Makefile  NOTICE.txt  OWNERS  OWNERS_ALIASES  PLUGINS_QUICKSTART.md  README.md  README_PLUGINS_REGISTRY.md  RELEASE  RELEASES.md  SECURITY.md  VERIFICATION_REPORT.md  WORKSPACE  codecov.yml  (+8 more)
cmd/: BUILD.bazel  image.bzl
cmd/api/: BUILD.bazel  README.md  main.go
cmd/api-debug/: BUILD.bazel
cmd/control-plane/: Dockerfile  README.md  main.go  ops.go  server.go
cmd/helloworld/: BUILD.bazel  Dockerfile  OWNERS  main.go
cmd/launcher/: BUILD.bazel  Dockerfile  Dockerfile-okd  OWNERS  README.md  main.go
cmd/livelog/: BUILD.bazel  main.go
cmd/operator/: BUILD.bazel  main.go
cmd/ops/: BUILD.bazel  main.go
cmd/pipecd/: BUILD.bazel  Dockerfile  OWNERS  README.md  main.go  ops.go  server.go
cmd/pipectl/: BUILD.bazel  Dockerfile  OWNERS  README.md  main.go
cmd/piped/: BUILD.bazel  Dockerfile  Dockerfile-okd  OWNERS  README.md  main.go  piped-config.yaml
cmd/pipedv1/: Dockerfile  README-usage-alpha.md  README.md  main.go
cmd/runner/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  README.md  main.go  server.go
cmd/web/: BUILD.bazel  README.md  main.go
hack/: BUILD.bazel  OWNERS  boilerplate.go.txt  cherry-pick.sh  create-kind-cluster.sh  create-local-registry.sh  ensure-check.sh  ensure-dco.sh  expose-generated-go.sh  gen-contributions.sh  gen-grpc-web-client.sh  gen-release-docs.sh  gen-release.sh  gen-stable-docs.sh  gha-reversemap.sh  local-codegen.sh  prepare-release.sh  prepare-version-docs.sh  prepare-versions-docs.sh  print-workspace-status.sh  push-images.sh  render-manifests.sh  render-release-note.sh  setup-keycloak-oidc.sh  sync-stable-docs.sh  tool.go  tools.go  update-codegen.sh  update-copyright.sh  verify-codegen.sh
hack/gen-go-strings/: BUILD.bazel  main.go
hack/oidc/: README.md  docker-compose.yml  realm.json  run-local-keycloak.sh
hack/plugin-scaffold/: main.go
pkg/admin/: BUILD.bazel  admin.go  admin_test.go  doc.go
pkg/backoff/: BUILD.bazel  backoff.go  backoff_test.go  constant.go  constant_test.go  exponential.go  exponential_test.go
pkg/cache/: BUILD.bazel  cache.go  cache_test.go  hash_cache.go
pkg/cli/: BUILD.bazel  app.go  cmd.go  cmd_test.go
pkg/config/: BUILD.bazel  analysis.go  analysis_template.go  analysis_template_test.go  analysis_test.go  app.go  app_test.go  application.go  application_cloudrun.go  application_cloudrun_test.go  application_ecs.go  application_ecs_test.go  application_kubernetes.go  application_kubernetes_test.go  application_lambda.go  application_lambda_test.go  application_terraform.go  application_terraform_test.go  application_test.go  bool.go  config.go  config.proto  config_test.go  control_plane.go  control_plane_test.go  deployment.go  deployment_cloudrun.go  deployment_cloudrun_test.go  deployment_ecs.go  deployment_ecs_test.go  deployment_kubernetes.go  deployment_kubernetes_test.go  deployment_lambda.go  deployment_lambda_test.go  deployment_terraform.go  deployment_terraform_test.go  deployment_test.go  duration.go  event_watcher.go  event_watcher_test.go  (+17 more)
pkg/crypto/: BUILD.bazel  aes.go  aes_test.go  crypto.go  decrypter.go  decrypter_test.go  encrypter.go  encrypter_test.go  hybrid.go  hybrid_test.go  key.go  key_test.go  rsa.go  rsa_test.go
pkg/datastore/: BUILD.bazel  apikey.go  apikey_test.go  application.go  applicationstore.go  applicationstore_test.go  collectionstore.go  commandstore.go  commandstore_test.go  datastore.go  deploymentchainstore.go  deploymentchainstore_test.go  deploymentstore.go  deploymentstore_test.go  deploymenttracestore.go  environmentstore.go  environmentstore_test.go  event.go  event_test.go  eventstore.go  eventstore_test.go  imagemetadata.go  imagemetadata_test.go  imagereference.go  imagereference_test.go  insightmilestonestore.go  insightmilestonestore_test.go  insightstore.go  insightstore_test.go  mock.go  pipedstatsstore.go  pipedstatsstore_test.go  pipedstore.go  pipedstore_test.go  projectstore.go  projectstore_test.go  tagstore.go
pkg/diff/: BUILD.bazel  diff.go  diff_test.go  diffbycommand.go  diffbycommand_test.go  renderer.go  renderer_test.go  result.go  result_test.go
pkg/filematcher/: BUILD.bazel  filematcher.go  filematcher_test.go
pkg/git/: BUILD.bazel  client.go  client_test.go  cloner.go  cloner_test.go  command_darwin.go  command_linux.go  commit.go  commit_test.go  repo.go  repo_test.go  ssh_config.go  ssh_config_test.go  url.go  url_test.go
pkg/insight/: BUILD.bazel  application.go  applicationcount.go  applicationcount_test.go  applicationscount.go  chunk.go  chunk_test.go  datapoint.go  datapoint_test.go  deployment.go  deployment_test.go  filepath.go  filepath_test.go  filestore.go  filestore_test.go  milestone.go  provider.go  provider_test.go  store.go  utils.go  utils_test.go
pkg/installer/: BUILD.bazel  installer.go  installer_test.go
pkg/jwt/: BUILD.bazel  jwt.go  signer.go  signer_test.go  verifier.go  verifier_test.go
pkg/log/: BUILD.bazel  log.go  log_test.go
pkg/model/: BUILD.bazel  analysis_metadata.proto  analysis_result.pb.go  analysis_result.pb.validate.go  analysis_result.proto  analysisprovider.go  apikey.go  apikey.pb.go  apikey.pb.validate.go  apikey.proto  apikey_test.go  application.go  application.pb.go  application.pb.validate.go  application.proto  application_live_state.go  application_live_state.pb.go  application_live_state.pb.validate.go  application_live_state.proto  application_live_state_test.go  application_resource.proto  application_state.proto  application_test.go  auth.pb.go  auth.pb.validate.go  auth.proto  bson.go  command.go  (+101 more)
(+5480 files in other folders)
