load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude docs
# gazelle:exclude hack
# gazelle:exclude dockers
# gazelle:exclude manifests
# gazelle:exclude terraform
# gazelle:exclude template
# gazelle:exclude vendor
# gazelle:exclude pkg/app/web/node_modules
# gazelle:exclude pkg/plugin/golinter/gofmt/testdata
# gazelle:exclude pkg/app/kapetool/cmd/godifflinter/pkg/linters/unusedparam/testdata
# gazelle:exclude pkg/app/kapetool/cmd/godifflinter/pkg/linters/ineffassign/testdata

# gazelle:build_file_name BUILD.bazel
# gazelle:prefix github.com/pipe-cd/pipe

gazelle(
    name = "gazelle",
)

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./docs/*",
        "./dockers/*",
        "./manifests/*",
        "./terraform/*",
        "./template/*",
        "./vendor/*",
    ],
)

genrule(
    name = "copy_piped",
    srcs = ["//cmd/piped:piped"],
    outs = ["piped"],
    cmd = "cp $< $@",
)

# gazelle:exclude pkg/app/helloworld/service/service.pb.validate.go
# gazelle:exclude pkg/app/api/service/webservice/service.pb.validate.go
# gazelle:exclude pkg/app/api/service/pipedservice/service.pb.validate.go
# gazelle:exclude pkg/model/application.pb.validate.go
# gazelle:exclude pkg/model/application_live_state.pb.validate.go
# gazelle:exclude pkg/model/command.pb.validate.go
# gazelle:exclude pkg/model/common.pb.validate.go
# gazelle:exclude pkg/model/deployment.pb.validate.go
# gazelle:exclude pkg/model/environment.pb.validate.go
# gazelle:exclude pkg/model/event.pb.validate.go
# gazelle:exclude pkg/model/logblock.pb.validate.go
# gazelle:exclude pkg/model/piped.pb.validate.go
# gazelle:exclude pkg/model/piped_stats.pb.validate.go
# gazelle:exclude pkg/model/project.pb.validate.go
# gazelle:exclude pkg/model/role.pb.validate.go
# gazelle:exclude pkg/model/user.pb.validate.go
