load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:image.bzl", "app_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kapetaniosci/pipe/cmd/api",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cli:go_default_library"],
)

go_binary(
    name = "api",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

app_image(
    name = "api",
    binary = ":api",
    repository = "pipe-api",
    visibility = ["//visibility:public"],
)
