load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:image.bzl", "app_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kapetaniosci/pipe/cmd/helloworld",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/app/helloworld/cmd/samplecli:go_default_library",
        "//pkg/app/helloworld/cmd/server:go_default_library",
        "//pkg/cli:go_default_library",
    ],
)

go_binary(
    name = "helloworld",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

app_image(
    name = "helloworld",
    binary = ":helloworld",
    repository = "pipe-helloworld",
    visibility = ["//visibility:public"],
)
