load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kapetaniosci/pipe/cmd/livelog",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/app/livelog/cmd/server:go_default_library",
        "//pkg/cli:go_default_library",
    ],
)

go_binary(
    name = "livelog",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("//bazel:image.bzl", "app_image")

app_image(
    name = "livelog",
    binary = ":livelog",
    repository = "pipe-livelog",
    visibility = ["//visibility:public"],
)
