load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:image.bzl", "app_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/pipe-cd/pipe/cmd/operator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/app/operator/cmd/server:go_default_library",
        "//pkg/cli:go_default_library",
    ],
)

go_binary(
    name = "operator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

app_image(
    name = "operator",
    binary = ":operator",
    repository = "operator",
    visibility = ["//visibility:public"],
)
