load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:image.bzl", "app_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/pipe-cd/pipe/cmd/ops",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/app/ops/cmd/server:go_default_library",
        "//pkg/cli:go_default_library",
    ],
)

go_binary(
    name = "ops",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

app_image(
    name = "ops_app",
    binary = ":ops",
    repository = "ops",
    visibility = ["//visibility:public"],
)
