load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "ops.go",
        "server.go",
    ],
    importpath = "github.com/pipe-cd/pipecd/cmd/pipecd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/admin:go_default_library",
        "//pkg/app/ops/deploymentchaincontroller:go_default_library",
        "//pkg/app/ops/firestoreindexensurer:go_default_library",
        "//pkg/app/ops/handler:go_default_library",
        "//pkg/app/ops/insightcollector:go_default_library",
        "//pkg/app/ops/mysqlensurer:go_default_library",
        "//pkg/app/ops/orphancommandcleaner:go_default_library",
        "//pkg/app/ops/pipedstatsbuilder:go_default_library",
        "//pkg/app/ops/planpreviewoutputcleaner:go_default_library",
        "//pkg/app/ops/staledpipedstatcleaner:go_default_library",
        "//pkg/app/server/analysisresultstore:go_default_library",
        "//pkg/app/server/apikeyverifier:go_default_library",
        "//pkg/app/server/applicationlivestatestore:go_default_library",
        "//pkg/app/server/commandoutputstore:go_default_library",
        "//pkg/app/server/grpcapi:go_default_library",
        "//pkg/app/server/httpapi:go_default_library",
        "//pkg/app/server/httpapi/httpapimetrics:go_default_library",
        "//pkg/app/server/pipedverifier:go_default_library",
        "//pkg/app/server/service/webservice:go_default_library",
        "//pkg/app/server/stagelogstore:go_default_library",
        "//pkg/app/server/unregisteredappstore:go_default_library",
        "//pkg/cache:go_default_library",
        "//pkg/cache/cachemetrics:go_default_library",
        "//pkg/cache/rediscache:go_default_library",
        "//pkg/cli:go_default_library",
        "//pkg/config:go_default_library",
        "//pkg/crypto:go_default_library",
        "//pkg/datastore:go_default_library",
        "//pkg/datastore/filedb:go_default_library",
        "//pkg/datastore/firestore:go_default_library",
        "//pkg/datastore/mysql:go_default_library",
        "//pkg/filestore:go_default_library",
        "//pkg/filestore/gcs:go_default_library",
        "//pkg/filestore/minio:go_default_library",
        "//pkg/filestore/s3:go_default_library",
        "//pkg/insight/insightmetrics:go_default_library",
        "//pkg/insight/insightstore:go_default_library",
        "//pkg/jwt:go_default_library",
        "//pkg/model:go_default_library",
        "//pkg/redis:go_default_library",
        "//pkg/rpc:go_default_library",
        "//pkg/version:go_default_library",
        "@com_github_golang_jwt_jwt//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/collectors:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "pipecd",
    data = [
        "//web:static",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "pipecd_app_image",
    base = "@pipecd-base//image",
    binary = ":pipecd",
    visibility = ["//visibility:public"],
)

container_bundle(
    name = "pipecd_app_bundle",
    images = {
        "$(DOCKER_REGISTRY)/pipecd:{STABLE_VERSION}": ":pipecd_app_image",
    },
)

docker_push(
    name = "pipecd_app_push",
    bundle = ":pipecd_app_bundle",
)
