load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/pipe-cd/pipe/cmd/pipectl",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/app/pipectl/cmd/application:go_default_library",
        "//pkg/app/pipectl/cmd/deployment:go_default_library",
        "//pkg/app/pipectl/cmd/encrypt:go_default_library",
        "//pkg/app/pipectl/cmd/event:go_default_library",
        "//pkg/app/pipectl/cmd/piped:go_default_library",
        "//pkg/app/pipectl/cmd/planpreview:go_default_library",
        "//pkg/cli:go_default_library",
    ],
)

go_binary(
    name = "pipectl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "pipectl_app_image",
    base = "@pipectl-base//image",
    binary = ":pipectl",
    visibility = ["//visibility:public"],
)
