load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:image.bzl", "app_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/pipe-cd/pipe/cmd/piped",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/app/piped/cmd/launcher:go_default_library",
        "//pkg/app/piped/cmd/piped:go_default_library",
        "//pkg/cli:go_default_library",
    ],
)

go_binary(
    name = "piped",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

app_image(
    name = "piped_app",
    base = "@piped-base//image",
    binary = ":piped",
    repository = "piped",
    visibility = ["//visibility:public"],
)

app_image(
    name = "piped_okd_app",
    base = "@piped-base-okd//image",
    binary = ":piped",
    repository = "piped-okd",
    visibility = ["//visibility:public"],
)
