load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/pipe-cd/pipecd/cmd/piped",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/app/piped/cmd/piped:go_default_library",
        "//pkg/cli:go_default_library",
    ],
)

go_binary(
    name = "piped",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
