load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:image.bzl", "app_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/pipe-cd/pipe/cmd/web",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/admin:go_default_library",
        "//pkg/cli:go_default_library",
        "@com_github_nytimes_gziphandler//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "web",
    data = [
        "//pkg/app/web:public_files",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

app_image(
    name = "web_app",
    binary = ":web",
    repository = "web",
    visibility = ["//visibility:public"],
)
