load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "admin.go",
        "doc.go",
    ],
    importpath = "github.com/pipe-cd/pipecd/pkg/admin",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_zap//:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["admin_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
