load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "analysis.go",
        "analysis_template.go",
        "config.go",
        "control_plane.go",
        "deployment.go",
        "duration.go",
        "piped.go",
        "replicas.go",
    ],
    importpath = "github.com/pipe-cd/pipe/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/model:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "analysis_template_test.go",
        "analysis_test.go",
        "control_plane_test.go",
        "deployment_test.go",
        "piped_test.go",
        "replicas_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/model:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
