load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "analysis.go",
        "analysis_template.go",
        "config.go",
        "control_plane.go",
        "deployment.go",
        "deployment_cloudrun.go",
        "deployment_ecs.go",
        "deployment_kubernetes.go",
        "deployment_lambda.go",
        "deployment_terraform.go",
        "duration.go",
        "event_watcher.go",
        "percentage.go",
        "piped.go",
        "replicas.go",
        "sealed_secret.go",
    ],
    importpath = "github.com/pipe-cd/pipe/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/filematcher:go_default_library",
        "//pkg/model:go_default_library",
        "@com_github_creasty_defaults//:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "analysis_template_test.go",
        "analysis_test.go",
        "config_test.go",
        "control_plane_test.go",
        "deployment_cloudrun_test.go",
        "deployment_ecs_test.go",
        "deployment_kubernetes_test.go",
        "deployment_lambda_test.go",
        "deployment_terraform_test.go",
        "deployment_test.go",
        "event_watcher_test.go",
        "percentage_test.go",
        "piped_test.go",
        "replicas_test.go",
        "sealed_secret_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/model:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
