load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "analysis.go",
        "analysis_template.go",
        "application.go",
        "application_cloudrun.go",
        "application_ecs.go",
        "application_kubernetes.go",
        "application_lambda.go",
        "application_terraform.go",
        "config.go",
        "control_plane.go",
        "duration.go",
        "event_watcher.go",
        "launcher.go",
        "percentage.go",
        "piped.go",
        "replicas.go",
        "sealed_secret.go",
    ],
    importpath = "github.com/pipe-cd/pipecd/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/filematcher:go_default_library",
        "//pkg/model:go_default_library",
        "@com_github_creasty_defaults//:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "analysis_test.go",
        "application_cloudrun_test.go",
        "application_ecs_test.go",
        "application_kubernetes_test.go",
        "application_lambda_test.go",
        "application_terraform_test.go",
        "application_test.go",
        "config_test.go",
        "control_plane_test.go",
        "event_watcher_test.go",
        "percentage_test.go",
        "piped_test.go",
        "replicas_test.go",
        "sealed_secret_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/model:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
