load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aes.go",
        "crypto.go",
        "hybrid.go",
        "key.go",
        "rsa.go",
    ],
    importpath = "github.com/pipe-cd/pipecd/pkg/crypto",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "aes_test.go",
        "hybrid_test.go",
        "key_test.go",
        "rsa_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
