load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "applicationstore.go",
        "commandstore.go",
        "datastore.go",
        "deploymentstore.go",
        "environmentstore.go",
        "pipedstatsstore.go",
        "pipedstore.go",
        "projectstore.go",
    ],
    importpath = "github.com/pipe-cd/pipe/pkg/datastore",
    visibility = ["//visibility:public"],
    deps = ["//pkg/model:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["deploymentstore_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/model:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
