load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apikey.go",
        "applicationstore.go",
        "commandstore.go",
        "datastore.go",
        "deploymentchainstore.go",
        "deploymentstore.go",
        "environmentstore.go",
        "eventstore.go",
        "mock.go",
        "pipedstatsstore.go",
        "pipedstore.go",
        "projectstore.go",
    ],
    importpath = "github.com/pipe-cd/pipe/pkg/datastore",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/model:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "apikey_test.go",
        "applicationstore_test.go",
        "commandstore_test.go",
        "deploymentchainstore_test.go",
        "deploymentstore_test.go",
        "environmentstore_test.go",
        "eventstore_test.go",
        "pipedstatsstore_test.go",
        "pipedstore_test.go",
        "projectstore_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/model:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
